--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="container">
+    <app-header></app-header>
+    
+    <router-outlet></router-outlet>
 
-<app-content></app-content>
-
-<app-footer></app-footer>
+    <app-content></app-content>
+</div>
