--- a/src/app/financas/financas.component.html
+++ b/src/app/financas/financas.component.html
@@ -18,7 +18,7 @@
 
           <div class="form-group">
             <label>Vencimento</label>
-            <input class="form-control" placeholder="Vencimento" formControlName="vencimento">
+            <input class="form-control" placeholder="DD/MM/YYYY" formControlName="vencimento">
           </div>
 
           <div class="form-group">
